force-app/main/default/objects/Contact/fields/Apartment_Num__c.field-meta.xml
<CustomField>
    <fullName>Apartment_Num__c</fullName>
    <label>Apartment Number</label>
    <length>6</length>
    <type>Text</type>
</CustomField>