force-app/main/default/objects/Contact/fields/Last_TU_Credit_Report_Request__c.field-meta.xml
<CustomField>
    <fullName>Last_TU_Credit_Report_Request__c</fullName>
    <description>The date and time of the most recent Credit Report Request.</description>
    <inlineHelpText>The date and time of the most recent Credit Report Request.</inlineHelpText>
    <label>Last TU Credit Report Request</label>
    <type>DateTime</type>
</CustomField>