force-app/main/default/objects/Contact/fields/Last_TU_Credit_Report_Request_Result__c.field-meta.xml
<CustomField>
    <fullName>Last_TU_Credit_Report_Request_Result__c</fullName>
    <description>The result of the most recent Credit Report Request.</description>
    <inlineHelpText>The result of the most recent Credit Report Request.</inlineHelpText>
    <label>Last TU Credit Report Request Result</label>
    <type>Picklist</type>
    <valueSet>
        <valueSetDefinition>
            <value>
                <fullName>Hit</fullName>
            </value>
            <value>
                <fullName>No Hit</fullName>
            </value>
            <value>
                <fullName>Error</fullName>
            </value>
            <value>
                <fullName>Other</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>