force-app/main/default/objects/Contact/fields/Last_TU_People_Search__c.field-meta.xml
<CustomField>
    <fullName>Last_TU_People_Search__c</fullName>
    <description>The date and time of the most recent People Search request.</description>
    <inlineHelpText>The date and time of the most recent People Search request.</inlineHelpText>
    <label>Last TU People Search</label>
    <type>DateTime</type>
</CustomField>