force-app/main/default/objects/Contact/fields/Last_TU_People_Search_Result__c.field-meta.xml
<CustomField>
    <fullName>Last_TU_People_Search_Result__c</fullName>
    <description>The result of the most recent People Search request.</description>
    <inlineHelpText>The result of the most recent People Search request.</inlineHelpText>
    <label>Last TU People Search Result</label>
    <type>Picklist</type>
    <valueSet>
        <restricted>true</restricted>
        <valueSetDefinition>
            <value>
                <fullName>Hit</fullName>
            </value>
            <value>
                <fullName>No Hit</fullName>
            </value>
        </valueSetDefinition>
    </valueSet>
</CustomField>