force-app/main/default/objects/Contact/fields/Social_Security_Number__c.field-meta.xml
<CustomField>
    <fullName>Social_Security_Number__c</fullName>
    <description>Social Security Number for TransUnion for SF</description>
    <inlineHelpText>Social Security Number for TransUnion for SF</inlineHelpText>
    <label>Social Security Number</label>
    <length>11</length>
    <maskChar>asterisk</maskChar>
    <maskType>all</maskType>
    <type>EncryptedText</type>
</CustomField>