force-app/main/default/objects/Contact/fields/TransUnion_Report_Token__c.field-meta.xml
<CustomField>
    <fullName>TransUnion_Report_Token__c</fullName>
    <description>TransUnion Report Token that identifies this person in the TransUnion system.</description>
    <inlineHelpText>TransUnion Report Token that identifies this person in the TransUnion system.</inlineHelpText>
    <label>TransUnion Report Token</label>
    <length>8</length>
    <type>Text</type>
</CustomField>