force-app/main/default/objects/Contact/fields/TU_Address_1__c.field-meta.xml
<CustomField>
    <fullName>TU_Address_1__c</fullName>
    <description>1st recent address from TransUnion.</description>
    <inlineHelpText>1st recent address from TransUnion.</inlineHelpText>
    <label>TU Address 1</label>
    <type>TextArea</type>
</CustomField>