force-app/main/default/objects/Contact/fields/TU_Address_2__c.field-meta.xml
<CustomField>
    <fullName>TU_Address_2__c</fullName>
    <description>2nd recent address from TransUnion.</description>
    <inlineHelpText>2nd recent address from TransUnion.</inlineHelpText>
    <label>TU Address 2</label>
    <type>TextArea</type>
</CustomField>