force-app/main/default/objects/Contact/fields/TU_Address_3__c.field-meta.xml
<CustomField>
    <fullName>TU_Address_3__c</fullName>
    <description>3rd recent address from TransUnion.</description>
    <inlineHelpText>3rd recent address from TransUnion.</inlineHelpText>
    <label>TU Address 3</label>
    <type>TextArea</type>
</CustomField>