force-app/main/default/objects/Contact/listViews/MyContacts.listView-meta.xml
<ListView>
    <fullName>MyContacts</fullName>
    <columns>FULL_NAME</columns>
    <columns>Social_Security_Number__c</columns>
    <columns>Last_TU_Credit_Report_Request__c</columns>
    <columns>Last_TU_Credit_Report_Request_Result__c</columns>
    <columns>Credit_Score__c</columns>
    <filterScope>Mine</filterScope>
    <label>My Contacts</label>
</ListView>